# skim-through

./: .gitignore  README.md  skim-through-architecture.drawio
cronjob/code/: result_consumer.py  result_producer.py  search_producer.py
service/: docker-compose.yml
skim-through-app/: Makefile  pyproject.toml
skim-through-app/project/: settings.py
